# slide_puzzle_challenge

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  slide_puzzle_answers.txt_2024-10-29T22-55-57  slide_puzzle_answers.txt_2024-10-29T22-57-37  slide_puzzle_answers.txt_2024-10-29T23-23-27  slidepuzzle.txt
backups/: answers_backup.txt
slide_puzzle_node/: deno.json  main.ts
src/: api.rs  main.rs  puzzle.rs  test.rs  tile.rs  traits.rs  util.rs
webui/: index.html  script.js  styles.css
